Details button spacing fix, and replace space on status name with -

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -409,3 +409,9 @@ a.AND-button:hover {
     width: 100%;
     padding: 0.75em 0em;
 }
+
+/* Details buttons changes */
+
+.details-buttons {
+    margin-left: -15px;
+}
